Fixing puzzle square hover z-index

--- a/app/assets/stylesheets/_puzzle.scss
+++ b/app/assets/stylesheets/_puzzle.scss
@@ -53,12 +53,13 @@
   &:not([readonly]):hover {
     background-color: #fff;
     transform: scale3d(1.1, 1.1, 1);
+    z-index: 1;
   }
 
   &:not([readonly]):focus {
     background-color: #fff;
     transform: scale3d(1.4, 1.4, 1);
-    z-index: 1;
+    z-index: 2;
   }
 
   &::-webkit-inner-spin-button,
